--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -23,10 +23,15 @@
         {% else %}
           <a class="btn btn-default btn-sm">{{ ad.promoteesCount }} promotes</a>
         {% endif %}
-        <a href="{{ app.request.uri }}" class="tweet btn btn-twitter btn-sm" data-via="adstacy" data-text="{{ ad.description }}" data-hashtags="{{ ad.tags|join(',') }}">
+        {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+        {% set tags = ad.tags|join(',') %}
+        {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+        {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+        {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+        <a href="{{ twitterUrl }}" class="tweet btn btn-twitter btn-sm">
           <span aria-hidden="true" data-icon="&#xe002;"></span> Twitter
         </a>
-        <a href="{{ app.request.uri }}" class="facebook-share btn btn-facebook btn-sm">
+        <a href="{{ facebookUrl }}" class="facebook-share btn btn-facebook btn-sm">
           <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
         </a>
         {% if app.user == user %}
