--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -52,14 +52,15 @@
     right: 0;
     width: 50px;
     height: 50px;
-    #gradient > .directional(rgba(187,0,0,1) 50%, rgba(187,0,0,0) 0%, 225deg);
+    #gradient > .directional(rgba(0,187,0,1) 50%, rgba(0,187,0,0) 0%, 225deg);
   }
 
   .promoted {
     position: absolute;
-    top: 5px;
-    right: 8px;
+    top: 2px;
+    right: 5px;
     color: #fff;
+    font-size: 20px;
   }
 }
 
