--- a/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/checkEmail.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
-<p>
-{{ 'resetting.check_email'|trans({'%email%': email}) }}
-</p>
+  <div class="jumbotron text-center">
+    <p class="lead">{{ 'resetting.check_email'|trans({'%email%': email}) }}</p>
+  </div>
 {% endblock %}
