--- a/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/passwordAlreadyRequested.html.twig
@@ -3,5 +3,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
-<p>{{ 'resetting.password_already_requested'|trans }}</p>
+  <div class="jumbotron text-center">
+    <p class="lead">{{ 'resetting.password_already_requested'|trans }}</p>
+  </div>
 {% endblock %}
