Settings page less refactored.

--- a/src/Adstacy/AppBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/settings.less
@@ -1,4 +1,4 @@
-.settings-container {
+#settings-container {
   width: 760px;
 
   .form-group {
@@ -16,12 +16,13 @@
     .form-widget {
       float: left;
       width: 480px;
+    }
 
-      a, p {
-        display: block;
-        height: 34px;
-        padding: 6px 2px;
-      }
+    .form-widget-a, 
+    .form-widget-p {
+      display: block;
+      height: 34px;
+      padding: 6px 2px;
     }
   }
 }
