--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
-<div class="settings-container panel panel-default">
+<div class="panel panel-default" id="settings-container">
   <section class="panel-section">
     <h1 class="title">User Info</h1>
     {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
@@ -25,7 +25,7 @@
       <div class="form-group">
         <label class="control-label">Password</label>
         <div class="form-widget">
-          <a href="{{ path('fos_user_change_password') }}">{{"form_profile.change_password"|trans}}</a>
+          <a class="form-widget-a" href="{{ path('fos_user_change_password') }}">{{"form_profile.change_password"|trans}}</a>
         </div>
       </div>
 
@@ -75,20 +75,22 @@
       <div class="form-group">
         <label class="control-label">Status</label>
         <div class="form-widget">
-          {% if user.facebookId %}
-            <p>{{"form_profile.connected"|trans({'%name%': user.facebookRealName})}}</p>
-          {% else %}
-            <p>{{"form_profile.not_connected"|trans}}</p>
-          {% endif %}
+          <p class="form-widget-p">
+            {% if user.facebookId %}
+              {{"form_profile.connected"|trans({'%name%': user.facebookRealName})}}
+            {% else %}
+              {{"form_profile.not_connected"|trans}}
+            {% endif %}
+          </p>
         </div>
       </div>
       <div class="form-group">
         <label class="control-label">&nbsp;</label>
         <div class="form-widget">
           {% if user.facebookId %}
-            <a href="{{ path('adstacy_app_user_disconnect', {service: 'facebook'}) }}" class="btn btn-facebook">{{"form_profile.disconnect"|trans({'%service%': 'Facebook'}) }}</a>
+            <a class="form-widget-a btn btn-facebook" href="{{ path('adstacy_app_user_disconnect', {service: 'facebook'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Facebook'}) }}</a>
           {% else %}
-            <a href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}" class="btn btn-facebook">{{"form_profile.connect"|trans({'%service%': 'Facebook'}) }}</a>
+            <a class="form-widget-a btn btn-facebook" href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}">{{"form_profile.connect"|trans({'%service%': 'Facebook'}) }}</a>
           {% endif %}
         </div>
       </div>
@@ -101,20 +103,22 @@
       <div class="form-group">
         <label class="control-label">Status</label>
         <div class="form-widget">
-          {% if user.twitterId %}
-            <p>{{"form_profile.connected"|trans({'%name%': user.twitterRealName}) }}</p>
-          {% else %}
-            <p>{{"form_profile.not_connected"|trans}}</p>
-          {% endif %}
+          <p class="form-widget-p">
+            {% if user.twitterId %}
+              {{"form_profile.connected"|trans({'%name%': user.twitterRealName}) }}
+            {% else %}
+              {{"form_profile.not_connected"|trans}}
+            {% endif %}
+          </p>
         </div>
       </div>
       <div class="form-group">
         <label class="control-label">&nbsp;</label>
         <div class="form-widget">
           {% if user.twitterId %}
-            <a href="{{ path('adstacy_app_user_disconnect', {service: 'twitter'}) }}" class="btn btn-twitter">{{"form_profile.disconnect"|trans({'%service%': 'Twitter'}) }}</a>
+            <a class="btn btn-twitter form-widget-a" href="{{ path('adstacy_app_user_disconnect', {service: 'twitter'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Twitter'}) }}</a>
           {% else %}
-            <a href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}" class="btn btn-twitter">{{"form_profile.connect"|trans({'%service%': 'Twitter'}) }}</a>
+            <a class="btn btn-twitter form-widget-a" href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}">{{"form_profile.connect"|trans({'%service%': 'Twitter'}) }}</a>
           {% endif %}
         </div>
       </div>
