use id for spesific container.

--- a/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/contact_us.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container panel panel-default">
+  <div id="contactus-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>
         <span aria-hidden="true" class="icon-envelope-alt"></span>
