--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -123,7 +123,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       {{"login"|trans}} <b class="caret"></b>
                     </a>
-                    <ul class="dropdown-menu dropdown-container">
+                    <ul id="login-dropdown-container" class="dropdown-menu">
                       <li>
                         {{ form_login() }}
                       </li>
