--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -1,40 +1,66 @@
-.form-container {
-  margin: auto;
+#register-container {
+  margin: 60px auto;
+  width: 500px;
+}
+
+#login-container {
+  margin: 60px auto;
   width: 500px;
 
-  // override
   hr {
     margin: 0;
   }
 
-  // override
   .btn-block + .btn-block {
     margin-top: 15px;
   }
 }
 
-.dropdown-container {
+#login-dropdown-container {
   width: 250px;
   padding: 15px;
 
-  // override
   .form-group {
     margin-bottom: 10px;
   }
 
-  // override
   .checkbox {
     margin-top: 6px;
     margin-bottom: 6px;
   }
 
-  // override
   p {
     margin: 0;
   }
 
-  // override
   .btn-block + .btn-block {
     margin-top: 10px;
+  }
+}
+
+#contactus-container {
+  width: 750px;
+  margin: auto;
+
+  .control-label, .control-widget {
+    float: left;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .control-label {
+    width: 174px;
+  }
+
+  .control-widget {
+    width: 574px;
+  }
+
+  .offset-control-label {
+    margin-left: 174px;
+  }
+
+  textarea.form-control {
+    resize: vertical;
   }
 }
