--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="form-container panel panel-default">
+  <div id="register-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>
         <span aria-hidden="true" class="icon-pencil"></span>
