--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="form-container panel panel-default">
+  <div id="login-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>
         <span aria-hidden="true" class="icon-signin"></span>
