--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -7,3 +7,5 @@
 @navbar-default-brand-hover-color: darken(@navbar-default-brand-color, 10%);
 @jumbotron-color: #fff;
 @jumbotron-bg: transparent;
+
+@state-success-bg: #fff;
