--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -24,3 +24,9 @@
 .w8 { width: 80%; }
 .w9 { width: 90%; }
 .w25 { width: 25%; }
+
+.alert-error {
+  background-color: #fff;
+  border-color: @state-danger-border;
+  color: @state-danger-text;
+}
