Refactor user profile page.

--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="adstacy-container">
-    <div class="user-profile-container panel panel-default clearfix">
+    <div class="panel panel-default clearfix" id="user-profile-container">
       <div class="profile-picture">
         <img src="{{ profile_pic(user) }}">
       </div>
