--- a/src/Adstacy/AppBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/settings.less
@@ -1,5 +1,10 @@
 #settings-container {
+  margin: 0 auto;
   width: 760px;
+
+  .panel {
+    margin-bottom: 10px;
+  }
 
   .form-group {
     margin-left: 0;
@@ -24,45 +29,5 @@
       height: 34px;
       padding: 6px 2px;
     }
-  }
-}
-
-.user-profile-container {
-  padding: 10px 20px;
-  margin-left: 7px;
-  margin-right: 7px;
-
-  .profile-picture {
-    float: left;
-    margin-right: 20px;
-    width: 100px;
-    img {
-      width: 100px;
-    }
-  }
-  .user-info {
-    float: left;
-    width: 85%;
-
-    .user-realname {
-      color: #555;
-      font-size: 24px;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    .user-about {
-      color: #888;
-      font-size: 16px;
-      line-height: 1.5;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    .profile-menu {
-      border-top: 1px solid #dfdfdf;
-      padding-top: 10px;
-    }
-  }
-  .btn-follow {
-    width: 100px;
   }
 }
