--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,128 +1,134 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
-<div class="panel panel-default" id="settings-container">
-  <section class="panel-section">
-    <h1 class="title">User Info</h1>
-    {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
-      {% set user = form.vars.data %}
+<div id="settings-container">
+  <div class="panel panel-default">
+    <div class="panel-heading"><h1>User Info</h1></div>
+    <div class="panel-body">
+      {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
+        {% set user = form.vars.data %}
 
-      <div class="form-group">
-        {{ form_label(form.image, label|default(null), { label_attr: { class: 'control-label' } }) }}
-        <div class="form-widget">
-          {{ form_widget(form.image, { attr: { class: 'form-control' } }) }}
+        <div class="form-group">
+          {{ form_label(form.image, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.image, { attr: { class: 'form-control' } }) }}
+          </div>
         </div>
-      </div>
 
 
-      <div class="form-group">
-        {{ form_label(form.username, label|default(null), { label_attr: { class: 'control-label' } }) }}
-        <div class="form-widget">
-          {{ form_widget(form.username, { attr: { class: 'form-control' } }) }}
+        <div class="form-group">
+          {{ form_label(form.username, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.username, { attr: { class: 'form-control' } }) }}
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label class="control-label">Password</label>
-        <div class="form-widget">
-          <a class="form-widget-a" href="{{ path('fos_user_change_password') }}">{{"form_profile.change_password"|trans}}</a>
+        <div class="form-group">
+          <label class="control-label">Password</label>
+          <div class="form-widget">
+            <a class="form-widget-a" href="{{ path('fos_user_change_password') }}">{{"form_profile.change_password"|trans}}</a>
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        {{ form_label(form.email, label|default(null), { label_attr: { class: 'control-label' } }) }}
-        <div class="form-widget">
-          {{ form_widget(form.email, { attr: { class: 'form-control' } }) }}
+        <div class="form-group">
+          {{ form_label(form.email, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.email, { attr: { class: 'form-control' } }) }}
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        {{ form_label(form.realName, label|default(null), { label_attr: { class: 'control-label' } }) }}
-        <div class="form-widget">
-          {{ form_widget(form.realName, { attr: { class: 'form-control' } }) }}
+        <div class="form-group">
+          {{ form_label(form.realName, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.realName, { attr: { class: 'form-control' } }) }}
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        {{ form_label(form.about, label|default(null), { label_attr: { class: 'control-label' } }) }}
-        <div class="form-widget">
-          {{ form_widget(form.about, { attr: { class: 'form-control' } }) }}
+        <div class="form-group">
+          {{ form_label(form.about, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.about, { attr: { class: 'form-control' } }) }}
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label class="control-label">&nbsp;</label>
-        <div class="form-widget">
-          {{ form_widget(form.save, { attr: { class: 'form-control btn btn-primary' } }) }}
+        <div class="form-group">
+          <label class="control-label">&nbsp;</label>
+          <div class="form-widget">
+            {{ form_widget(form.save, { attr: { class: 'form-control btn btn-primary' } }) }}
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label class="control-label">&nbsp;</label>
-        <div class="form-widget">
-          <a href="{{ path('fos_user_resetting_request') }}">{{"form_profile.forgot_password"|trans}}</a>
+        <div class="form-group">
+          <label class="control-label">&nbsp;</label>
+          <div class="form-widget">
+            <a href="{{ path('fos_user_resetting_request') }}">{{"form_profile.forgot_password"|trans}}</a>
+          </div>
         </div>
-      </div>
 
-      {{ form_rest(form) }}
+        {{ form_rest(form) }}
 
-    {{ form_end(form) }}
-  </section>
+      {{ form_end(form) }}
+    </div>
+  </div>
 
-  <section class="panel-section">
-    <h1 class="title">Facebook Connect</h1>
-    <div class="form-horizontal">
-      <div class="form-group">
-        <label class="control-label">Status</label>
-        <div class="form-widget">
-          <p class="form-widget-p">
+  <div class="panel panel-default">
+    <div class="panel-heading"><h1>Facebook Connect</h1></div>
+    <div class="panel-body">
+      <div class="form-horizontal">
+        <div class="form-group">
+          <label class="control-label">Status</label>
+          <div class="form-widget">
+            <p class="form-widget-p">
+              {% if user.facebookId %}
+                {{"form_profile.connected"|trans({'%name%': user.facebookRealName})}}
+              {% else %}
+                {{"form_profile.not_connected"|trans}}
+              {% endif %}
+            </p>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label">&nbsp;</label>
+          <div class="form-widget">
             {% if user.facebookId %}
-              {{"form_profile.connected"|trans({'%name%': user.facebookRealName})}}
+              <a class="form-widget-a btn btn-facebook" href="{{ path('adstacy_app_user_disconnect', {service: 'facebook'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Facebook'}) }}</a>
             {% else %}
-              {{"form_profile.not_connected"|trans}}
+              <a class="form-widget-a btn btn-facebook" href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}">{{"form_profile.connect"|trans({'%service%': 'Facebook'}) }}</a>
             {% endif %}
-          </p>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="control-label">&nbsp;</label>
-        <div class="form-widget">
-          {% if user.facebookId %}
-            <a class="form-widget-a btn btn-facebook" href="{{ path('adstacy_app_user_disconnect', {service: 'facebook'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Facebook'}) }}</a>
-          {% else %}
-            <a class="form-widget-a btn btn-facebook" href="{{ path('hwi_oauth_service_redirect', {service: 'facebook'}) }}">{{"form_profile.connect"|trans({'%service%': 'Facebook'}) }}</a>
-          {% endif %}
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 
-  <section class="panel-section">
-    <h1 class="title">Twitter Connect</h1>
-    <div class="form-horizontal">
-      <div class="form-group">
-        <label class="control-label">Status</label>
-        <div class="form-widget">
-          <p class="form-widget-p">
-            {% if user.twitterId %}
-              {{"form_profile.connected"|trans({'%name%': user.twitterRealName}) }}
-            {% else %}
-              {{"form_profile.not_connected"|trans}}
-            {% endif %}
-          </p>
+  <div class="panel panel-default">
+    <div class="panel-heading"><h1 class="title">Twitter Connect</h1></div>
+    <div class="panel-body">
+      <div class="form-horizontal">
+        <div class="form-group">
+          <label class="control-label">Status</label>
+          <div class="form-widget">
+            <p class="form-widget-p">
+              {% if user.twitterId %}
+                {{"form_profile.connected"|trans({'%name%': user.twitterRealName}) }}
+              {% else %}
+                {{"form_profile.not_connected"|trans}}
+              {% endif %}
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label class="control-label">&nbsp;</label>
-        <div class="form-widget">
-          {% if user.twitterId %}
-            <a class="btn btn-twitter form-widget-a" href="{{ path('adstacy_app_user_disconnect', {service: 'twitter'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Twitter'}) }}</a>
-          {% else %}
-            <a class="btn btn-twitter form-widget-a" href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}">{{"form_profile.connect"|trans({'%service%': 'Twitter'}) }}</a>
-          {% endif %}
+        <div class="form-group">
+          <label class="control-label">&nbsp;</label>
+          <div class="form-widget">
+            {% if user.twitterId %}
+              <a class="btn btn-twitter form-widget-a" href="{{ path('adstacy_app_user_disconnect', {service: 'twitter'}) }}">{{"form_profile.disconnect"|trans({'%service%': 'Twitter'}) }}</a>
+            {% else %}
+              <a class="btn btn-twitter form-widget-a" href="{{ path('hwi_oauth_service_redirect', {service: 'twitter'}) }}">{{"form_profile.connect"|trans({'%service%': 'Twitter'}) }}</a>
+            {% endif %}
+          </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
 </div>
 {% endblock %}
