Refactor change password page.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -318,22 +318,12 @@ ul.nav-expand {
   }
 }
 
+// Form 
 span.required {
   color: red;
 }
 
-/* Refactored Class Name */
+// Container 
 .panel {
   margin: 0 auto;
-}
-.panel-section {
-  padding: 20px;
-
-  .title {
-    border-bottom: 1px solid #dfdfdf;
-    font-size: 28px;
-    margin: 0;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
-  }
 }
