--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,18 +1,9 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block stylesheets %}
-  {{ parent() }}
-  {% stylesheets filter='cssrewrite, uglifycss'
-    'bundles/adstacyuser/less/settings.less'
-  %}
-    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
-  {% endstylesheets %}
-{% endblock %}
-
 {% block content %}
-  <div class="settings-container panel panel-default">
-    <section class="settings-section">
-      <h1>{{"form_password.title"|trans}}</h1>
+  <div class="panel panel-default" id="settings-container">
+    <div class="panel-heading"><h1>{{"form_password.title"|trans}}</h1></div>
+    <div class="panel-body">
       {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
         <div class="form-group">
           {{ form_label(form.current_password, label|default(null), { label_attr: { class: 'control-label' } }) }}
@@ -45,6 +36,6 @@
         {{ form_rest(form) }}
 
       {{ form_end(form) }}
-    </section>
+    </div>
   </div>
 {% endblock %}
