--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -5,23 +5,25 @@
 {% block content %}
   <div class="adstacy-container">
     <div class="panel panel-default clearfix" id="user-profile-container">
-      <div class="profile-picture">
-        <img src="{{ profile_pic(user) }}">
-      </div>
+      <div class="panel-body">
+        <div class="profile-picture">
+          <img src="{{ profile_pic(user) }}">
+        </div>
 
-      <div class="user-info">
-        <h1 class="user-realname">
-          <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a>
-          {% if app.user and app.user != user %}
-            {% set followed = app.user.hasFollowUser(user) %}
-            <a class="btn btn-primary btn-follow unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
-            <a class="btn btn-primary btn-follow follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
-          {% endif %}
-        </h1>
-        <h2 class="user-about">{{ user.about }}</h2>
-        <div class="profile-menu">
-          <a class="btn {% if tab == 'followers' %}btn-primary{% endif %}" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
-          <a class="btn {% if tab == 'followings' %}btn-primary{% endif %}" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
+        <div class="user-info">
+          <h1 class="user-realname">
+            <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a>
+            {% if app.user and app.user != user %}
+              {% set followed = app.user.hasFollowUser(user) %}
+              <a class="btn btn-primary btn-follow unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Unfollow</a>
+              <a class="btn btn-primary btn-follow follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+            {% endif %}
+          </h1>
+          <h2 class="user-about">{{ user.about }}</h2>
+          <div class="profile-menu">
+            <a class="btn {% if tab == 'followers' %}btn-primary{% endif %}" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}"><span class="user-followers-count">{{ followersCount }}</span> Followers</a>
+            <a class="btn {% if tab == 'followings' %}btn-primary{% endif %}" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">{{ followingsCount }} Followings</a>
+          </div>
         </div>
       </div>
     </div>
