Refactor search user page.

--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -1,4 +1,4 @@
-<div class="user-thumb panel panel-default">
+<div class="panel panel-default" id="search-user-thumb">
   <div class="clearfix">
     <div class="profile-picture"><img src="{{ profile_pic(user) }}" /></div>
     <div class="user-info">
