--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -209,19 +209,7 @@ ul.nav-expand {
     margin: 0;
   }
 }
-.thumb-container {
-  font-size: 0;
-  width: 250px;
-  padding: 0 10px 10px 0;
-}
-.thumb {
-  font-size: 16px;
-  width: 110px;
-  height: 110px;
-  display: inline-block;
-  margin: 10px 0 0 10px;
-  border-radius: @border-radius-small;
-}
+
 .follow-container {
   padding: 0 10px 10px;
 }
@@ -313,12 +301,13 @@ ul.nav-expand {
   }
 }
 
-// Form 
+// Form
 span.required {
   color: red;
 }
 
-// Container 
+// Container
 .panel {
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
