--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -7,58 +7,77 @@
 {% block content %}
   {% set user = ad.user %}
 
-  <div class="ad-detail-container panel panel-default">
-    <div class="panel-body toolbar clearfix">
-      <div>
-        {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: ad.user, text: '2 minutes ago' } %}
+  <div id="ad-detail-container">
+    <div id="ad-detail-content" class="pull-left">
+      <div class="panel panel-default">
+        <div class="panel-body toolbar">
+          {% if app.user %}
+            <div class="btn-group btn-group-sm">
+              {% set promoted = app.user.hasPromote(ad) %}
+              <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Unpromote</a>
+              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Promote</a>
+              <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
+            </div>
+          {% else %}
+            <a class="btn btn-default btn-sm">{{ ad.promoteesCount }} promotes</a>
+          {% endif %}
+
+          {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+          {% set tags = ad.tags|join(',') %}
+          {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+          {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+          {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+
+          <a href="{{ twitterUrl }}" class="tweet btn btn-twitter btn-sm">
+            <span aria-hidden="true" data-icon="&#xe002;"></span> Twitter
+          </a>
+          <a href="{{ facebookUrl }}" class="facebook-share btn btn-facebook btn-sm">
+            <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
+          </a>
+          {% if app.user == user %}
+            <div class="btn-group btn-group-sm pull-right">
+              <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-default">{{"edit"|trans}}</a>
+              <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">{{"delete"|trans}}</a>
+            </div>
+          {% endif %}
+        </div>
+
+        <div class="panel-body">
+          <p class="h4">{{ parse_url(parse_hashtag(ad.description)) }}</p>
+        </div>
+
+        <div class="text-center">
+          {% set src = vich_uploader_asset(ad.image, 'file') %}
+          <img src="{{ src }}" alt="{{ ad.description }}">
+        </div>
       </div>
-      <div class="pull-right">
-        {% if app.user %}
-          <div class="btn-group btn-group-sm">
-            {% set promoted = app.user.hasPromote(ad) %}
-            <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Unpromote</a>
-            <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}"><span class="icon-bullhorn"></span> Promote</a>
-            <button type="button" class="btn btn-default promotes-count">{{ ad.promoteesCount }}</button>
+
+      {% if ad.content %}
+        <div class="panel panel-default">
+          <div class="panel-body">
+            {{ ad.content|raw }}
           </div>
-        {% else %}
-          <a class="btn btn-default btn-sm">{{ ad.promoteesCount }} promotes</a>
-        {% endif %}
-        {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
-        {% set tags = ad.tags|join(',') %}
-        {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
-        {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
-        {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
-        <a href="{{ twitterUrl }}" class="tweet btn btn-twitter btn-sm">
-          <span aria-hidden="true" data-icon="&#xe002;"></span> Twitter
-        </a>
-        <a href="{{ facebookUrl }}" class="facebook-share btn btn-facebook btn-sm">
-          <span aria-hidden="true" data-icon="&#xe003;"></span> Facebook
-        </a>
-        {% if app.user == user %}
-          <span class="space"></span>
-          <div class="btn-group btn-group-sm">
-            <a href="{{ path('adstacy_app_ad_edit', {id: ad.id}) }}" class="btn btn-default">{{"edit"|trans}}</a>
-            <a href="#" data-toggle="modal" data-target="#confirm-modal" class="btn btn-primary">{{"delete"|trans}}</a>
-          </div>
-        {% endif %}
+        </div>
+      {% endif %}
+    </div>
+
+    <div id="ad-detail-sidebar" class="pull-left">
+      <div class="panel panel-default">
+        <div class="panel-body clearfix">
+          {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: ad.user, text: '2 minutes ago' } %}
+        </div>
+        <div class="panel-body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, molestias.</p>
+        </div>
+        <div class="thumb-container">
+          <div class="thumb"><img data-src="holder.js/100x100"></div>
+          <div class="thumb"><img data-src="holder.js/100x100"></div>
+          <div class="thumb"><img data-src="holder.js/100x100"></div>
+          <div class="thumb"><img data-src="holder.js/100x100"></div>
+        </div>
       </div>
-    </div>
-    <div class="panel-body">
-      <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
-    </div>
-    <div class="text-center">
-      {% set src = vich_uploader_asset(ad.image, 'file') %}
-      <img src="{{ src }}" alt="{{ ad.description }}">
     </div>
   </div>
-
-  {% if ad.content %}
-    <div class="ad-detail-container panel panel-default">
-      <div class="panel-body">
-        {{ ad.content|raw }}
-      </div>
-    </div>
-  {% endif %}
 
   <div class="modal fade" id="confirm-modal">
     <div class="modal-dialog">
