--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -102,6 +102,10 @@
 #ad-detail-content {
   width: 750px;
 
+  .lead {
+    font-size: 16px;
+  }
+
   img {
     .img-responsive(inline-block);
   }
