--- a/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
@@ -3,14 +3,14 @@
 {% endif %}
 <div class="user-mini">
   <div class="profile-picture">
-    <img src="{{ profile_pic(user) }}" alt="{{ user.username }}">
+    <img class="profile-picture-img" src="{{ profile_pic(user) }}" alt="{{ user.username }}">
   </div>
   <div class="user-desc">
       <div class="user-realname">
         {% if as_link is defined and as_link == false %}
           <span>{{ user.username }}</span>
         {% else %}
-          <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.username }}</a>
+          <a class="user-realname-a" href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.username }}</a>
         {% endif %}
       </div>
       <div class="user-label">{{ text }}</div>
