fix thumb-container layout.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -74,6 +74,7 @@
           <div class="thumb"><img data-src="holder.js/100x100"></div>
           <div class="thumb"><img data-src="holder.js/100x100"></div>
           <div class="thumb"><img data-src="holder.js/100x100"></div>
+          <a href="#" class="btn btn-primary btn-block follow-user">Follow</a>
         </div>
       </div>
     </div>
