--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -119,7 +119,7 @@
 .thumb-container {
   font-size: 0;
   width: 230px;
-  padding: 0 10px 10px 0;
+  padding: 10px;
   margin-left: 2px;
   margin-right: 2px;
 
@@ -128,8 +128,12 @@
     width: 100px;
     height: 100px;
     display: inline-block;
-    margin: 10px 0 0 10px;
+    margin: 0 10px 10px 0;
     border-radius: @border-radius-small;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
 }
 
