--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -2,7 +2,7 @@
   <div class="pic">
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
       <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
-        data-original="{{ vich_uploader_asset(ad.image, 'file')|imagine_filter('thumbnail') }}"
+        data-original="{{ vich_uploader_asset(ad, 'image')|imagine_filter('thumbnail') }}"
         width="{{ thumb_width }}px" height="{{ ad.thumbHeight }}px" alt="{{ ad.description }}">
     </a>
     {#
