Add border between ad image and description.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -24,7 +24,7 @@
     {% endif %}
   </div>
 
-  <div class="ad-section">
+  <div class="ad-section ad-description">
     <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
   </div>
 
