--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -5,7 +5,7 @@
   border-radius: @border-radius-base;
   box-shadow: 0 1px 6px #000;
 
-  > .ad-section {
+  .ad-section {
     padding: 5px 10px;
 
     > p {
@@ -14,7 +14,7 @@
     }
   }
 
-  > .ad-counter {
+  .ad-counter {
     white-space: nowrap;
     a {
       color: #888;
@@ -23,10 +23,8 @@
     }
   }
 
-  .ad-social-list a {
-    color: @gray-light;
-    font-size: @font-size-small;
-    font-weight: bold;
+  .ad-description {
+    border-top: 1px solid #dfdfdf;
   }
 
   .ad-user {
