--- a/src/Adstacy/AppBundle/Resources/public/less/base/form.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/form.less
@@ -33,6 +33,11 @@
     margin: 0;
   }
 
+  .footer-link > a {
+    color: #999;
+    font-size: 12px;
+  }
+
   .btn-block + .btn-block {
     margin-top: 10px;
   }
