--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -56,6 +56,7 @@
 @import "./utilities.less";
 
 @import "./base/layout.less";
+@import "./base/search.less";
 @import "./base/ad.less";
 @import "./base/form.less";
 @import "./settings.less";
