--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -4,6 +4,31 @@
   white-space: nowrap;
 }
 
+.w1 { width: 10%; }
+.w2 { width: 20%; }
+.w3 { width: 30%; }
+.w4 { width: 40%; }
+.w5 { width: 50%; }
+.w6 { width: 60%; }
+.w7 { width: 70%; }
+.w8 { width: 80%; }
+.w9 { width: 90%; }
+
+.w25 { width: 25%; }
+
+.alert-error {
+  background-color: #fff;
+  border-color: @state-danger-border;
+  color: @state-danger-text;
+}
+
+.btn-icon {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+/* unused
 .h-stack {
   display: table;
   width: 100%;
@@ -14,19 +39,8 @@
   }
 }
 
-.w1 { width: 10%; }
-.w2 { width: 20%; }
-.w3 { width: 30%; }
-.w4 { width: 40%; }
-.w5 { width: 50%; }
-.w6 { width: 60%; }
-.w7 { width: 70%; }
-.w8 { width: 80%; }
-.w9 { width: 90%; }
-.w25 { width: 25%; }
-
-.alert-error {
-  background-color: #fff;
-  border-color: @state-danger-border;
-  color: @state-danger-text;
+.space {
+  width: 30px;
+  display: inline-block;
 }
+*/
