--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -117,6 +117,11 @@
                     </div>
                   </li>
                 {% else %}
+                  <li>
+                    <div class="navbar-btn" style="margin-right: 10px">
+                      <a class="btn btn-success" href="{{ path('fos_user_registration_register') }}">{{"register"|trans}}</a>
+                    </div>
+                  </li>
                   <li class="dropdown">
                     <div class="btn-group navbar-btn">
                       <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -137,8 +142,6 @@
                         <li class="divider"></li>
                         <li>
                           <p class="footer-link">
-                            <a href="{{ path('fos_user_registration_register') }}">{{"register"|trans}}</a>
-                            <br>
                             <a href="{{ path('fos_user_resetting_request') }}">{{"forgot_password"|trans}}</a>
                           </p>
                         </li>
