Redesign user thumb template.

--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -1,38 +1,34 @@
 #search-user-thumb {
   width: 236px;
-  height: 135px;
+  height: 218px;
   margin: 14px 7px 0 7px;
   padding: 5px 10px;
   float: left;
 
-  .user-info {
+  .user-ads {
     float: left;
-    width: 155px;
+    width: 105px;
+    img {
+      border: 1px solid #dfdfdf;
+      border-radius: 3px;
+      display: inline-block;
+      margin-bottom: 5px;
+    }
   }
   
   .user-realname {
     font-size: 14px;
     font-weight: bold;
     height: 15px;
-    margin-top: 3px;
-    margin-bottom: 5px;
-  }
-
-  .user-about {
-    border-top: 1px dotted #dfdfdf;
-    color: #888;
-    font-size: 11px;
-    margin-bottom: 5px;
     margin-top: 5px;
-    padding-top: 5px;
+    margin-bottom: 10px;
   }
 
   .user-score {
-    color: #888;
-    font-size: 11px;
     margin-bottom: 5px;
     a {
-      color: #888;
+      color: #999;
+      font-size: 11px;
       font-weight: bold;
     }
   }
@@ -40,11 +36,10 @@
   .profile-picture {
     float: left;
     margin-bottom: 5px;
-    margin-right: 8px;
+    margin-right: 4px;
     img {
       border-radius: 3px;
-      height: 50px;
-      width: 50px;
+      width: 105px;
     }
   }
 }
