--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -5,8 +5,17 @@
   padding: 5px 10px;
   float: left;
 
-  .user-ads {
+  .profile-picture {
     float: left;
+    margin-bottom: 5px;
+    img {
+      border-radius: 3px;
+      width: 105px;
+    }
+  }
+
+  .user-ads {
+    float: right;
     width: 105px;
     img {
       border: 1px solid #dfdfdf;
@@ -32,53 +41,57 @@
       font-weight: bold;
     }
   }
-
-  .profile-picture {
-    float: left;
-    margin-bottom: 5px;
-    margin-right: 4px;
-    img {
-      border-radius: 3px;
-      width: 105px;
-    }
-  }
 }
 
 #user-profile-container {
   margin-left: 7px;
   margin-right: 7px;
+  width: 800px;
 
   .profile-picture {
     float: left;
-    margin-right: 20px;
+    margin-right: 10px;
     width: 100px;
     img {
       width: 100px;
     }
   }
+  .btn {
+    font-size: 12px;
+    padding: 3px 0;
+    width: 90px;
+  }
+
   .user-info {
     float: left;
-    width: 85%;
-
-    .user-realname {
-      color: #555;
-      font-size: 24px;
-      margin: 0;
-      margin-bottom: 5px;
+    width: 650px;
+  }
+  .user-info-realname {
+    color: #b00;
+    font-size: 20px;
+    margin: 0;
+    margin-bottom: 5px;
+  }
+  .user-info-about {
+    color: #999;
+    font-size: 13px;
+    line-height: 1.5;
+    margin: 0;
+    margin-bottom: 5px;
+    min-height: 40px;
+    .empty {
+      color: #ccc;
+      font-style: italic;
     }
-    .user-about {
-      color: #888;
-      font-size: 16px;
-      line-height: 1.5;
-      margin: 0;
-      margin-bottom: 5px;
-    }
-    .profile-menu {
-      border-top: 1px solid #dfdfdf;
-      padding-top: 10px;
+    a {
+      color: #999;
+      font-style: normal;
+      font-weight: bold;
     }
   }
-  .btn-follow {
-    width: 100px;
+  .user-info-menu {
+    border-top: 1px dotted #dfdfdf;
+    padding-top: 5px;
+    margin-bottom: 0;
   }
 }
