--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -31,7 +31,7 @@
   </div>
 
   <div class="ad-section ad-counter">
-    <a href="#">{{ ad.promoteesCount }} Promotes</a>
+    <a href="#"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
   </div>
 
   <div class="ad-section ad-user clearfix">
