--- a/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/ads.html.twig
@@ -18,8 +18,8 @@
     {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
   {% endfor %}
   {% if paginator.hasNextPage %}
-    {% set params = {page: paginator.getNextPage}|merge(app.request.query.all) %}
-    <a href="{{ path('adstacy_app_search_ads', params )}}" class="btn btn-default btn-lg btn-block next-page">{{"more"|trans}}</a>
+    {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
+    <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-default btn-lg btn-block next-page">{{"more"|trans}}</a>
   {% endif %}
 {% endblock %}
 
