--- a/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
@@ -18,8 +18,8 @@
     {% include 'AdstacyAppBundle:User:user.html.twig' with {user: user} %}
   {% endfor %}
   {% if paginator.hasNextPage %}
-    {% set params = {page: paginator.getNextPage}|merge(app.request.query.all) %}
-    <a href="{{ path('adstacy_app_search_users', params )}}" class="btn btn-default btn-lg btn-block next-page">More</a>
+    {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
+    <a href="{{ path('adstacy_app_search', params )}}" class="btn btn-default btn-lg btn-block next-page">More</a>
   {% endif %}
 {% endblock %}
 
